<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:background="@drawable/kotak1"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="265dp"
        android:elevation="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/porkys"
            android:gravity="center"
            android:textSize="40sp"
            android:text="@string/judul"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/colorPrimary">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:src="@mipmap/logo1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ttl1"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/theunseen"
                android:textColor="@color/putih"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ttl2"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/theunseen"
                android:textColor="@color/putih"
                android:textSize="25sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="70dp"
            android:paddingStart="70dp"
            android:paddingEnd="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp">
                <View
                    android:id="@+id/tblHB"
                    android:foreground="@mipmap/icon_hb3"
                    android:background="@drawable/tombol2"
                    android:clickable="true"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:focusable="true" />
                <View
                    android:id="@+id/tblSUHU"
                    android:clickable="true"
                    android:foreground="@mipmap/icon_suhu3"
                    android:background="@drawable/tombol2"
                    android:layout_marginTop="20dp"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:focusable="true" />
                <View
                    android:id="@+id/tblKELUAR"
                    android:clickable="true"
                    android:foreground="@mipmap/icon_keluar3"
                    android:background="@drawable/tombol2"
                    android:layout_marginTop="20dp"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:focusable="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:fontFamily="@font/theunseen"
                    android:gravity="center|left"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/dj"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center|left"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:fontFamily="@font/theunseen"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/sb"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_height="70dp"
                    android:gravity="center|left"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:fontFamily="@font/theunseen"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/kl"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>